5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1602_825.log
== SUBMITION (2019-03-22 16:28:03) 
-- CODE:
int(input("raio : "))

from math import *

a = (pi*r**2)
v = (4/3*pi*r**3)
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.135855
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:28:12) 
-- CODE:
int(input("raio : "))

from math import *

a = (pi*r**2)
v = (4/3*pi*r**3)
print(round(a,3))
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:29:16) 
-- CODE:
int(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a,3))
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:29:37) 
-- CODE:
r = int(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.182917
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:29:42) 
-- CODE:
r = int(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a,3))
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:29:48) 
-- CODE:
r = 2int(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a,3))
print(round(v,3))
-- ERROR:
File "XXXX", line 1
    r = 2int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 16:30:01) 
-- CODE:
r = int(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a,3))
print(round(v,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:30:15) 
-- CODE:
r = int(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.153504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:30:28) 
-- CODE:
r = int(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME:
0.113336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/825/main.py", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 16:32:00) 
-- CODE:
r = float(input("raio : "))

from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME:
0.126799
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
